the larp continues unabated

--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -7810,9 +7810,9 @@
  SEM_stratocratic:0 "Samarkand Military Junta"
  SEM_stratocratic_DEF:0 "Samarkand Military Junta"
  SEM_stratocratic_ADJ:0 "Samarkand"
- SEM_authoritarian_monarchism:0 "Kingdom of Samarkand"
- SEM_authoritarian_monarchism_DEF:0 "Kingdom of Samarkand"
- SEM_authoritarian_monarchism_ADJ:0 "Samarkand"
+ SEM_authoritarian_monarchism:0 "Oxus"
+ SEM_authoritarian_monarchism_DEF:0 "The Oxus Culture"
+ SEM_authoritarian_monarchism_ADJ:0 "Oxus"
  SEM_republican_fascism:0 "Samarkand State"
  SEM_republican_fascism_DEF:0 "Samarkand State"
  SEM_republican_fascism_ADJ:0 "Samarkand"
@@ -15596,9 +15596,9 @@
  BHT_stratocratic:0 "Bohtan Military Junta"
  BHT_stratocratic_DEF:0 "Bohtan Military Junta"
  BHT_stratocratic_ADJ:0 "Bohtan"
- BHT_authoritarian_monarchism:0 "Bohtan Kingdom"
- BHT_authoritarian_monarchism_DEF:0 "Bohtan Kingdom"
- BHT_authoritarian_monarchism_ADJ:0 "Bohtan"
+ BHT_authoritarian_monarchism:0 "Urkesh"
+ BHT_authoritarian_monarchism_DEF:0 "The City-State of Urkesh"
+ BHT_authoritarian_monarchism_ADJ:0 "Hurrian"
  BHT_republican_fascism:0 "Greater Bohtan State"
  BHT_republican_fascism_DEF:0 "Greater Bohtan State"
  BHT_republican_fascism_ADJ:0 "Bohtan"
@@ -30938,12 +30938,12 @@
  A12_DEF:0 "The City-State of Khafadje"
  A12_ADJ:0 "Antakarinja"
 
- A13:0 "Nana Tribes"
- A13_DEF:0 "The Nana Tribes"
+ A13:0 "Sadm"
+ A13_DEF:0 "The City-State of Sadm"
  A13_ADJ:0 "Nana"
 
- A14:0 "Wawula Tribes"
- A14_DEF:0 "The Wawula Tribes"
+ A14:0 "Gomo'rha"
+ A14_DEF:0 "The City-State of Gomo'rha"
  A14_ADJ:0 "Wawula"
 
  A15:0 "Kalaako Tribes"
@@ -34400,9 +34400,9 @@
  QAW_stratocratic:0 "Qawasimi Military Junta"
  QAW_stratocratic_DEF:0 "Qawasimi Military Junta"
  QAW_stratocratic_ADJ:0 "Qawasimi"
- QAW_authoritarian_monarchism:0 "Qawasimi Kingdom"
- QAW_authoritarian_monarchism_DEF:0 "Qawasimi Kingdom"
- QAW_authoritarian_monarchism_ADJ:0 "Qawasimi"
+ QAW_authoritarian_monarchism:0 "Mahhashi"
+ QAW_authoritarian_monarchism_DEF:0 "The Mahhashi Civilization"
+ QAW_authoritarian_monarchism_ADJ:0 "Mahhashi"
  QAW_republican_fascism:0 "Greater Qawasimi State"
  QAW_republican_fascism_DEF:0 "Greater Qawasimi State"
  QAW_republican_fascism_ADJ:0 "Qawasimi"
@@ -38229,9 +38229,9 @@
  KDR_stratocratic:0 "Kandahari Military Junta"
  KDR_stratocratic_DEF:0 "Kandahari Military Junta"
  KDR_stratocratic_ADJ:0 "Kandahari"
- KDR_authoritarian_monarchism:0 "Kandahari Kingdom"
- KDR_authoritarian_monarchism_DEF:0 "Kandahari Kingdom"
- KDR_authoritarian_monarchism_ADJ:0 "Kandahari"
+ KDR_authoritarian_monarchism:0 "Helmand"
+ KDR_authoritarian_monarchism_DEF:0 "The Helmand Culture"
+ KDR_authoritarian_monarchism_ADJ:0 "Helmand"
  KDR_republican_fascism:0 "Greater Kandahari State"
  KDR_republican_fascism_DEF:0 "Greater Kandahari State"
  KDR_republican_fascism_ADJ:0 "Kandahari"
@@ -40839,8 +40839,8 @@
  KJR_neutrality:0 "State of Jerusalem"
  KJR_neutrality_DEF:0 "State of Jerusalem"
  KJR_neutrality_ADJ:0 "Jerusalemite"
- KJR_authoritarian_monarchism:0 "Second Kingdom of Jerusalem"
- KJR_authoritarian_monarchism_DEF:0 "the Second Kingdom of Jerusalem"
+ KJR_authoritarian_monarchism:0 "Jericho"
+ KJR_authoritarian_monarchism_DEF:0 "The City-State of Jericho"
  KJR_authoritarian_monarchism_ADJ:0 "Jerusalemite"
  KJR_stratocratic:0 "Crusader State"
  KJR_stratocratic_DEF:0 "Crusader State"
@@ -40918,9 +40918,9 @@
  CTP_neutrality:0 "State of Tripoli"
  CTP_neutrality_DEF:0 "State of Tripoli"
  CTP_neutrality_ADJ:0 "Tripolitan"
- CTP_authoritarian_monarchism:0 "Tripolitan Kingdom"
- CTP_authoritarian_monarchism_DEF:0 "Tripolitan Kingdom"
- CTP_authoritarian_monarchism_ADJ:0 "Tripolitan"
+ CTP_authoritarian_monarchism:0 "Byblos"
+ CTP_authoritarian_monarchism_DEF:0 "The City-State of Byblos"
+ CTP_authoritarian_monarchism_ADJ:0 "Byblian"
  CTP_stratocratic:0 "Tripolitan Military Junta"
  CTP_stratocratic_DEF:0 "Tripolitan Military Junta"
  CTP_stratocratic_ADJ:0 "Tripolitan"
