--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3781,9 +3781,9 @@
  IRQ_stratocratic_monarchism:0 "Mandate of Iraq"
  IRQ_stratocratic_monarchism_DEF:0 "The Mandate of Iraq"
  IRQ_stratocratic_monarchism_ADJ:0 "Iraqi"
- IRQ_authoritarian_monarchism:0 "Hashemite Kingdom of Iraq"
- IRQ_authoritarian_monarchism_DEF:0 "The Hashemite Kingdom of Iraq"
- IRQ_authoritarian_monarchism_ADJ:0 "Iraqi"
+ IRQ_authoritarian_monarchism:0 "Mesopotamia"
+ IRQ_authoritarian_monarchism_DEF:0 "The Neolithic Mesopotamia"
+ IRQ_authoritarian_monarchism_ADJ:0 "Mesopotamian"
  IRQ_monarchism:0 "Kingdom of Iraq"
  IRQ_monarchism_DEF:0 "The Kingdom of Iraq"
  IRQ_monarchism_ADJ:0 "Iraqi"
@@ -4481,8 +4481,8 @@
  SAU_anocratic_monarchism_DEF:0 "The Emirate of Diriyah"
  SAU_neutrality:0 "Colony of Arabia"
  SAU_neutrality_DEF:0 "The Colony of Arabia"
- SAU_authoritarian_monarchism:0 "Protectorate of Nejd and Hasa"
- SAU_authoritarian_monarchism_DEF:0 "The Protectorate of Nejd and Hasa"
+ SAU_authoritarian_monarchism:0 "Arabia"
+ SAU_authoritarian_monarchism_DEF:0 "The Arabian Nomads"
  SAU_stratocratic:0 "Arabian Provisional Government"
  SAU_stratocratic_DEF:0 "The Arabian Provisional Government"
  SAU_stratocratic_monarchism:0 "Kingdom of Hejaz and Nejd"
@@ -5025,8 +5025,8 @@
  EGY_stratocratic_DEF:0 "The Egyptian Millitary Junta"
  EGY_stratocratic_monarchism:0 "Colony of Egypt"
  EGY_stratocratic_monarchism_DEF:0 "The Colony of Egypt"
- EGY_authoritarian_monarchism:0 "Kingdom of Egypt and Sudan"
- EGY_authoritarian_monarchism_DEF:0 "The Kingdom of Egypt and Sudan"
+ EGY_authoritarian_monarchism:0 "Kingdom of Kemet"
+ EGY_authoritarian_monarchism_DEF:0 "The Kingdom of Kemet"
  EGY_monarchism:0 "Sultanate of Egypt"
  EGY_monarchism_DEF:0 "The Sultanate of Egypt"
  EGY_theocratic:0 "Islamic State of Egypt"
@@ -5094,8 +5094,8 @@
  KAZ_democratic_monarchism_DEF:0 "Kimek Khaganate"
  KAZ_anarchism_ideology:0 "Kazakh Tribes"
  KAZ_anarchism_ideology_DEF:0 "The Kazakh Tribes"
- KAZ_authoritarian_monarchism:0 "Kazakh Hordes"
- KAZ_authoritarian_monarchism_DEF:0 "The Kazakh Hordes"
+ KAZ_authoritarian_monarchism:0 "Kelteminar"
+ KAZ_authoritarian_monarchism_DEF:0 "The Kelteminar Culture"
  KAZ_stratocratic:0 "Kazakh Military District"
  KAZ_stratocratic_DEF:0 "The Kazakh Military District"
  KAZ_national_socialism:0 "Reichskommissariat Kasachstan"
@@ -5274,8 +5274,8 @@
  DDR_right_anarchism_ADJ:0 "Elban"
  DDR_ADJ:0 "East German"
  
- PAL_fascism:0 "Colony of Italian Palestine"
- PAL_fascism_DEF:0 "The Colony of Italian Palestine"
+ PAL_authoritarian_monarchism:0 "Canaan"
+ PAL_authoritarian_monarchism_DEF:0 "The Canaanite Tribes"
  PAL_democratic:0 "Republic of Palestine"
  PAL_democratic_DEF:0 "The Republic of Palestine"
  PAL_communism:0 "Palestinian Commune"
@@ -5296,8 +5296,6 @@
  PAL_liberal_republic_DEF:0 "The Federation of Israel-Palestine"
  PAL_stratocratic_monarchism:0 "Colony of Palestine"
  PAL_stratocratic_monarchism_DEF:0 "The Colony of Palestine"
- PAL_authoritarian_monarchism:0 "British Mandate of Palestine"
- PAL_authoritarian_monarchism_DEF:0 "The British Mandate of Palestine"
  PAL_anocratic_monarchism:0 "Dominion of Palestine"
  PAL_anocratic_monarchism_DEF:0 "The Dominion of Palestine"
  PAL_national_socialism:0 "Reichskommissariat Nahost"
@@ -5860,9 +5858,9 @@
  HJZ_monarchism:0 "Kingdom of Hejaz"
  HJZ_monarchism_DEF:0 "The Kingdom of Hejaz"
  HJZ_monarchism_ADJ:0 "Hejazi"
- HJZ_authoritarian_monarchism:0 "Viceroyalty of Hejaz"
- HJZ_authoritarian_monarchism_DEF:0 "The Viceroyalty of Hejaz"
- HJZ_authoritarian_monarchism_ADJ:0 "Saudi Arabian"
+ HJZ_authoritarian_monarchism:0 "Medjet"
+ HJZ_authoritarian_monarchism_DEF:0 "The Medjet Tribes"
+ HJZ_authoritarian_monarchism_ADJ:0 "Medjet"
  HJZ_centrist_monarchism:0 "Kingdom of Hashemite Arabia"
  HJZ_centrist_monarchism_DEF:0 "The Kingdom of Hashemite Arabia"
  HJZ_centrist_monarchism_ADJ:0 "Hashemite Arabian"
@@ -6884,8 +6882,8 @@
  SUD_anocratic_monarchism_DEF:0 "Turco-Egyptian Sudan"
  SUD_neutrality:0 "Sudanese State"
  SUD_neutrality_DEF:0 "The Sudanese State"
- SUD_authoritarian_monarchism:0 "Anglo-Egyptian Condominium of Sudan"
- SUD_authoritarian_monarchism_DEF:0 "The Anglo-Egyptian Condominium of Sudan"
+ SUD_authoritarian_monarchism:0 "Nubia"
+ SUD_authoritarian_monarchism_DEF:0 "The Nubian Civilization"
  SUD_stratocratic:0 "Franco-Egyptian Condominium of Sudan"
  SUD_stratocratic_DEF:0 "The Franco-Egyptian Condominium of Sudan"
  SUD_stratocratic_monarchism:0 "Colony of Sudan"
@@ -12674,9 +12672,9 @@
  QAT_conservative_monarchism:0 "Emirate of Qatar"
  QAT_conservative_monarchism_DEF:0 "The Emirate of Qatar"
  QAT_conservative_monarchism_ADJ:0 "Qatari"
- QAT_authoritarian_monarchism:0 "State of Qatar"
- QAT_authoritarian_monarchism_DEF:0 "State of Qatar"
- QAT_authoritarian_monarchism_ADJ:0 "Qatari"
+ QAT_authoritarian_monarchism:0 "Dilmun"
+ QAT_authoritarian_monarchism_DEF:0 "The Dilmun Civilization"
+ QAT_authoritarian_monarchism_ADJ:0 "Dilmun"
  QAT_centrist_monarchism_monarchism:0 "Protectorate of Qatar"
  QAT_centrist_monarchism_monarchism_DEF:0 "Protectorate of Qatar"
  QAT_centrist_monarchism_monarchism_ADJ:0 "Qatari"
@@ -15513,9 +15511,9 @@
  PMR_anarchism_ideology_DEF:0 "The Pamiri Tribes"
  PMR_anarchism_ideology_ADJ:0 "Pamiri"
  
- KHZ_democratic:0 "Republic of Khuzestan"
- KHZ_democratic_DEF:0 "The Republic of Khuzestan"
- KHZ_democratic_ADJ:0 "Khuzestani"
+ KHZ_authoritarian_monarchism:0 "Susa"
+ KHZ_authoritarian_monarchism_DEF:0 "The Susa Civilization"
+ KHZ_authoritarian_monarchism_ADJ:0 "Susa"
  KHZ_communism:0 "People's Republic of Khuzestan"
  KHZ_communism_DEF:0 "The People's Republic of Khuzestan"
  KHZ_communism_ADJ:0 "Khuzestani"
@@ -16782,9 +16780,9 @@
  GUM_monarchism_DEF:0 "The Kingdom of Guam"
  GUM_monarchism_ADJ:0 "Guamanian"
  
- JEB_democratic:0 "Druze Republic"
- JEB_democratic_DEF:0 "The Druze Republic"
- JEB_democratic_ADJ:0 "Druze"
+ JEB_authoritarian_monarchism:0 "Aramea"
+ JEB_authoritarian_monarchism_DEF:0 "The Aramean Culture"
+ JEB_authoritarian_monarchism_ADJ:0 "Aramean"
  JEB_communism:0 "People's Republic of Druze"
  JEB_communism_DEF:0 "The People's Republic of Druze"
  JEB_communism_ADJ:0 "Druze"
@@ -16801,8 +16799,8 @@
  JEB_monarchism_DEF:0 "The Druze Sultanate"
  JEB_monarchism_ADJ:0 "Druze"
  
- ALW_authoritaria_monarchism:0 "Ugarit"
- ALW_authoritaria_monarchism_DEF:0 "The City-State of Ugarit"
+ ALW_authoritarian_monarchism:0 "Ugarit"
+ ALW_authoritarian_monarchism_DEF:0 "The City-State of Ugarit"
  ALW_democratic_ADJ:0 "Alawite"
  ALW_communism:0 "People's Republic of Latakia"
  ALW_communism_DEF:0 "The People's Republic of Latakia"
@@ -19800,9 +19798,9 @@
  BRI_national_socialism:0 "Reichsprotektorat Bretagne"
  BRI_national_socialism_DEF:0 "das Reichsprotektorat Bretagne"
  
- SIN_democratic:0 "Republic of Sinai"
- SIN_democratic_DEF:0 "The Republic of Sinai"
- SIN_democratic_ADJ:0 "Sinai"
+ SIN_authoritarian_monarchism:0 "Medyan"
+ SIN_authoritarian_monarchism_DEF:0 "The Medyan Culture"
+ SIN_authoritarian_monarchism_ADJ:0 "Medyani"
  SIN_communism:0 "People's Republic of Sinai"
  SIN_communism_DEF:0 "The People's Republic of Sinai"
  SIN_communism_ADJ:0 "Sinai"
@@ -26435,8 +26433,8 @@
  OMN_communism_DEF:0 "The People's Republic of Oman"
  OMN_monarchism:0 "Sultanate of Muscat and Oman"
  OMN_monarchism_DEF:0 "The Sultanate of Muscat and Oman"
- OMN_authoritarian_monarchism:0 "Sultanate of Oman"
- OMN_authoritarian_monarchism_DEF:0 "The Sultanate of Oman"
+ OMN_authoritarian_monarchism:0 "Magan"
+ OMN_authoritarian_monarchism_DEF:0 "The Magan Civilization"
  OMN_conservative_monarchism:0 "Omani Empire"
  OMN_conservative_monarchism_DEF:0 "The Omani Empire"
  OMN_stratocratic_monarchism:0 "Colony of Oman"
@@ -29860,8 +29858,8 @@
  MSV_authoritarian_monarchism_DEF:0 "The Duchy of Masovia"
  MSV_authoritarian_monarchism_ADJ:0 "Masovian"
 
- ASY_neutrality:0 "Assyria"
- ASY_neutrality_DEF:0 "The Assyria"
+ ASY_authoritarian_monarchism:0 "Hurri"
+ ASY_authoritarian_monarchism_DEF:0 "The Hurri Civilization"
  ASY_monarchism:0 "Kingdom of Assyria"
  ASY_monarchism_DEF:0 "The Kingdom of Assyria"
  ASY_democratic:0 "Republic of Assyria"
@@ -29880,9 +29878,9 @@
  ASY_democratic_monarchism_DEF:0 "The Jalayirid Sultanate"
  ASY_ADJ:0 "Assyrian"
 
- ETC_neutrality:0 "State of East Turcomania"
- ETC_neutrality_DEF:0 "The East Turcomania"
- ETC_neutrality_ADJ:0 "Turcomanian"
+ ETC_authoritarian_monarchism:0 "Niniveh"
+ ETC_authoritarian_monarchism_DEF:0 "The City-State of Niniveh"
+ ETC_authoritarian_monarchism_ADJ:0 "Niniveh"
  ETC_monarchism:0 "Kingdom of East Turcomania"
  ETC_monarchism_DEF:0 "The Kingdom of East Turcomania"
  ETC_monarchism_ADJ:0 "Turcomanian"
@@ -30017,9 +30015,9 @@
  LAR_fascism_DEF:0 "The Larestani State"
  LAR_fascism_ADJ:0 "Larestani"
 
- LRS_neutrality:0 "Lorestan"
- LRS_neutrality_DEF:0 "The Lorestan"
- LRS_neutrality_ADJ:0 "Lorestani"
+ LRS_authoritarian_monarchism:0 "Elam"
+ LRS_authoritarian_monarchism_DEF:0 "The Elamite Culture"
+ LRS_authoritarian_monarchism_ADJ:0 "Elamite"
  LRS_monarchism:0 "Kingdom of Poshtukh"
  LRS_monarchism_DEF:0 "The Kingdom of Lorestan"
  LRS_monarchism_ADJ:0 "Lorestani"
@@ -30052,9 +30050,9 @@
  KHO_democratic_monarchism_DEF:0 "Afsharid Persia"
  KHO_democratic_monarchism_ADJ:0 "Persian"
 
- KRM_neutrality:0 "Kerman"
- KRM_neutrality_DEF:0 "The Kerman"
- KRM_neutrality_ADJ:0 "Kermani"
+ KRM_authoritarian_monarchism:0 "Jiroft"
+ KRM_authoritarian_monarchism_DEF:0 "The Jiroft Culture"
+ KRM_authoritarian_monarchism_ADJ:0 "Jiroft"
  KRM_monarchism:0 "Kingdom of Kerman"
  KRM_monarchism_DEF:0 "The Kingdom of Kerman"
  KRM_monarchism_ADJ:0 "Kermani"
@@ -30068,9 +30066,9 @@
  KRM_fascism_DEF:0 "The Kermani State"
  KRM_fascism_ADJ:0 "Kermani"
 
- FAS_neutrality:0 "Fars"
- FAS_neutrality_DEF:0 "The Fars"
- FAS_neutrality_ADJ:0 "Farsi"
+ FAS_authoritarian_monarchism:0 "Harcen"
+ FAS_authoritarian_monarchism_DEF:0 "The Harcen Culture"
+ FAS_authoritarian_monarchism_ADJ:0 "Harcens"
  FAS_monarchism:0 "Kingdom of Persis"
  FAS_monarchism_DEF:0 "The Kingdom of Persis"
  FAS_monarchism_ADJ:0 "Persi"
