--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -2,8 +2,8 @@
 
  HB2:0 "Hebei"
  HB2_DEF:0 "Hebei"
- HB2_socialism_ideology:0 "Hebei Province"
- HB2_socialism_ideology_DEF:0 "The Hebei Province"
+ HB2_authoritarian_monarchism:0 "Longshan"
+ HB2_authoritarian_monarchism_DEF:0 "The Longshan Culture"
  HB2_socialism_ideology_ADJ:0 "Hebeian"
  HB2_neutrality:0 "Hopeh Province"
  HB2_neutrality_DEF:0 "The Hopeh Province"
@@ -12448,8 +12448,8 @@
  TIG_stratocratic:0 "Tigrayan Military Junta"
  TIG_stratocratic_DEF:0 "Tigrayan Military Junta"
  TIG_stratocratic_ADJ:0 "Tigrayan"
- TIG_authoritarian_monarchism:0 "Tigrayan Kingdom"
- TIG_authoritarian_monarchism_DEF:0 "Tigrayan Kingdom"
+ TIG_authoritarian_monarchism:0 "P'nt"
+ TIG_authoritarian_monarchism_DEF:0 "The P'nt Culture"
  TIG_authoritarian_monarchism_ADJ:0 "Tigrayan"
  TIG_republican_fascism:0 "Greater Tigrayan State"
  TIG_republican_fascism_DEF:0 "Greater Tigrayan State"
@@ -30840,8 +30840,8 @@
  AUI_socialist_monarchy_DEF:0 "The Aleutian Islands"
  AUI_anarchism_ideology:0 "Aleut Tribes"
  AUI_anarchism_ideology_DEF:0 "The Aleut Tribes"
- AUI_authoritarian_monarchism:0 "Aleut Confederacy"
- AUI_authoritarian_monarchism_DEF:0 "The Aleut Confederacy"
+ AUI_authoritarian_monarchism:0 "Aleuts"
+ AUI_authoritarian_monarchism_DEF:0 "The Aleuts"
  AUI_monarchism:0 "Aleutian Kingdom"
  AUI_monarchism_DEF:0 "The Aleutian Kingdom"
  AUI_ADJ:0 "Aleut"
@@ -32323,9 +32323,9 @@
  KLO_stratocratic:0 "Kel Oweyan Military Junta"
  KLO_stratocratic_DEF:0 "Kel Oweyan Military Junta"
  KLO_stratocratic_ADJ:0 "Kel Oweyan"
- KLO_authoritarian_monarchism:0 "Kel Owey Confederation"
- KLO_authoritarian_monarchism_DEF:0 "Kel Owey Confederation"
- KLO_authoritarian_monarchism_ADJ:0 "Kel Oweyan"
+ KLO_authoritarian_monarchism:0 "Teneri"
+ KLO_authoritarian_monarchism_DEF:0 "The Teneri Culture"
+ KLO_authoritarian_monarchism_ADJ:0 "Teneri"
  KLO_republican_fascism:0 "Greater Kel Oweyan State"
  KLO_republican_fascism_DEF:0 "Greater Kel Oweyan State"
  KLO_republican_fascism_ADJ:0 "Kel Oweyan"
@@ -39563,8 +39563,8 @@
  AFR_democratic_DEF:0 "The African Union"
  AFR_neutrality:0 "African State"
  AFR_neutrality_DEF:0 "The African State"
- AFR_authoritarian_monarchism:0 "Crown Colony of British Africa"
- AFR_authoritarian_monarchism_DEF:0 "The Crown Colony of British Africa"
+ AFR_authoritarian_monarchism:0 ""
+ AFR_authoritarian_monarchism_DEF:0 "The Neolithic Africans"
  AFR_stratocratic_monarchism:0 "Colony of German Africa"
  AFR_stratocratic_monarchism_DEF:0 "The Colony of German Africa"
  AFR_fascism:0 "Italian Colony of Africa"
@@ -39843,8 +39843,8 @@
  WGG_national_socialism_DEF:0 "The Sabotage Assault Reconnaissance Group "Rusich""
  WGG_national_socialism_ADJ:0 "Wagnerite"
 
- RSF_stratocratic:0 "Rapid Support Forces"
- RSF_stratocratic_DEF:0 "The Rapid Support Forces"
+ RSF_authoritarian_monarchism:0 "Upper Nubia"
+ RSF_authoritarian_monarchism_DEF:0 "The Upper Nubian Tribes"
  RSF_stratocratic_ADJ:0 "Sudanese"
  RSF_stratocratic_monarchism:0 "Sudanese Rapid Support Forces"
  RSF_stratocratic_monarchism_DEF:0 "The Sudanese Rapid Support Forces"
@@ -40707,8 +40707,8 @@
  SD6_stratocratic_DEF:0 "Sudan Liberation Movement - Minnawi"
  SD6_stratocratic_ADJ:0 "Sudanese"
  
- SD7_stratocratic:0 "Sudan Liberation Movement - Tambour"
- SD7_stratocratic_DEF:0 "Sudan Liberation Movement - Tambour"
+ SD7_authoritarian_monarchism:0 "Temehu"
+ SD7_authoritarian_monarchism_DEF:0 "The Temehu Culture"
  SD7_stratocratic_ADJ:0 "Sudanese"
  
  BEK_anarchism_ideology:0 "Taulantii"
