--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -731,8 +731,8 @@
  IND_stratocratic_DEF:0 "The Indian Military Junta"
  IND_stratocratic_monarchism:0 "Mughal Empire"
  IND_stratocratic_monarchism_DEF:0 "The Mughal Empire"
- IND_authoritarian_monarchism:0 "Kingdom of India"
- IND_authoritarian_monarchism_DEF:0 "The Kingdom of India"
+ IND_authoritarian_monarchism:0 ""
+ IND_authoritarian_monarchism_DEF:0 "The Neolithic Indians"
  IND_monarchism:0 "Empire of India"
  IND_monarchism_DEF:0 "The Empire of India"
  IND_theocratic:0 "Hindustan"
@@ -1916,9 +1916,9 @@
  CCI_stratocratic:0 "Chukchi Military Junta"
  CCI_stratocratic_DEF:0 "Chukchi Military Junta"
  CCI_stratocratic_ADJ:0 "Chukchi"
- CCI_authoritarian_monarchism:0 "Kingdom of Chukchi"
- CCI_authoritarian_monarchism_DEF:0 "Kingdom of Chukchi"
- CCI_authoritarian_monarchism_ADJ:0 "Chukchi"
+ CCI_authoritarian_monarchism:0 "Cherov"
+ CCI_authoritarian_monarchism_DEF:0 "The Cherov Culture"
+ CCI_authoritarian_monarchism_ADJ:0 "Cherov"
  CCI_republican_fascism:0 "Chukchi State"
  CCI_republican_fascism_DEF:0 "Chukchi State"
  CCI_republican_fascism_ADJ:0 "Chukchi"
@@ -6801,8 +6801,8 @@
  IDS_stratocratic_monarchism:0 "Indonesian Revolutionaries"
  IDS_stratocratic_monarchism_DEF:0 "The Indonesian Revolutionaries"
  IDS_stratocratic_monarchism_ADJ:0 "Indonesian"
- IDS_authoritarian_monarchism:0 "Indonesian Empire"
- IDS_authoritarian_monarchism_DEF:0 "The Indonesian Empire"
+ IDS_authoritarian_monarchism:0 ""
+ IDS_authoritarian_monarchism_DEF:0 "The Neolithic Southeast Asia"
  IDS_authoritarian_monarchism_ADJ:0 "Indonesian"
  IDS_monarchism:0 "Majapahit Empire"
  IDS_monarchism_DEF:0 "The Majapahit Empire"
@@ -6859,8 +6859,8 @@
  CCG_stratocratic:0 "Chungking Clique"
  CCG_stratocratic_DEF:0 "The Chungking Clique"
  CCG_stratocratic_ADJ:0 "Chungking"
- CCG_authoritarian_monarchism:0 "Kingdom of Chungking"
- CCG_authoritarian_monarchism_DEF:0 "Kingdom of Chungking"
+ CCG_authoritarian_monarchism:0 "Quijialing"
+ CCG_authoritarian_monarchism_DEF:0 "The Quijialing Culture"
  CCG_authoritarian_monarchism_ADJ:0 "Chungking"
  CCG_republican_fascism:0 "Chungking State"
  CCG_republican_fascism_DEF:0 "Chungking State"
