trying to fix it

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -6558,94 +6558,12 @@
  MAC_vanguardism_DEF:0 "The People's Republic of Macedonia"
  MAC_ADJ:0 "Macedonian"
 
- GRL_fascism:0 "Empire of Greenland"
- GRL_fascism_DEF:0 "The Empire of Greenland"
- GRL_democratic:0 "Greenland"
- GRL_democratic_DEF:0 "The Greenland"
- GRL_neutrality:0 "Territory of Greenland"
- GRL_neutrality_DEF:0 "The Territory of Greenland"
- GRL_socialist_monarchy:0 "Greenland"
- GRL_socialist_monarchy_DEF:0 "The Greenland"
- GRL_neutrality:0 "State of Greenland"
- GRL_neutrality_DEF:0 "The State of Greenland"
- GRL_centrist_republic:0 "Republic of Greenland"
- GRL_centrist_republic_DEF:0 "The Republic of Greenland"
- GRL_communism:0 "Inuit People's Republic"
- GRL_communism_DEF:0 "The Inuit People's Republic"
-<<<<<<< Updated upstream
- GRL_authoritarian_monarchism:0 "Saqqaq"
- GRL_authoritarian_monarchism_DEF:0 "The Saqqaq Culture"
-=======
-<<<<<<< Updated upstream
- GRL_authoritarian_monarchism:0 "Colony of Greenland"
- GRL_authoritarian_monarchism_DEF:0 "The Colony of Greenland"
-=======
  GRL_authoritarian_monarchism:0 ""
  GRL_authoritarian_monarchism_DEF:0 "The Saqqaq Culture"
->>>>>>> Stashed changes
->>>>>>> Stashed changes
- GRL_monarchism:0 "Kingdom of Greenland"
- GRL_monarchism_DEF:0 "The Kingdom of Greenland"
- GRL_anarchism_ideology:0 "Kalaallit Tribes"
- GRL_anarchism_ideology_DEF:0 "The Kalaallit Tribes"
- GRL_national_socialism:0 "Reichsprotektorat Grönland"
- GRL_national_socialism_DEF:0 "Das Reichsprotektorat Grönland"
- GRL_liberal_republic:0 "Inuit Federation"
- GRL_liberal_republic_DEF:0 "The Inuit Federation"
- GRL_stratocratic:0 "Territory of Greenland"
- GRL_stratocratic_DEF:0 "The Territory of Greenland"
- GRL_stratocratic_monarchism:0 "Protectorate of Greenland"
- GRL_stratocratic_monarchism_DEF:0 "The Protectorate of Greenland"
  GRL_ADJ:0 "Greenlander"
  
- PRE_anarchism_ideology:0 "Pruteni"
- PRE_anarchism_ideology_DEF:0 "The Pruteni"
- PRE_left_anarchism:0 "Free Territory of Prussia"
- PRE_left_anarchism_DEF:0 "The Free Territory of Prussia"
- PRE_vanguardism:0 "Soviet Republic of Prussia"
- PRE_vanguardism_DEF:0 "The Soviet Republic of Prussia"
- PRE_communism:0 "Prussian People's Republic"
- PRE_communism_DEF:0 "The Prussian People's Republic"
- PRE_socialism_ideology:0 "Socialist Republic of Prussia"
- PRE_socialism_ideology_DEF:0 "The Socialist Republic of Prussia"
- PRE_socialist_monarchy:0 "Free Prussian Kingdom"
- PRE_socialist_monarchy_DEF:0 "The Free Prussian Kingdom"
- PRE_liberal_republic:0 "Free State of Prussia"
- PRE_liberal_republic_DEF:0 "The Free State of Prussia"
- PRE_democratic_monarchism:0 "Prussian Kingdom"
- PRE_democratic_monarchism_DEF:0 "The Prussian Kingdom"
- PRE_centrist_republic:0 "State of Prussia"
- PRE_centrist_republic_DEF:0 "The State of Prussia"
- PRE_centrist_monarchism:0 "Confederation of Prussian Kingdoms"
- PRE_centrist_monarchism_DEF:0 "The Confederation of Prussian Kingdoms"
- PRE_democratic:0 "Republic of Prussia"
- PRE_democratic_DEF:0 "The Republic of Prussia"
- PRE_conservative_monarchism:0 "North German Confederation"
- PRE_conservative_monarchism_DEF:0 "The North German Confederation"
- PRE_anocratic_republic:0 "Prussian Federation"
- PRE_anocratic_republic_DEF:0 "Prussian Federation"
- PRE_anocratic_monarchism:0 "Prussian Empire"
- PRE_anocratic_monarchism_DEF:0 "The Prussian Empire"
- PRE_neutrality:0 "Prussian State"
- PRE_neutrality_DEF:0 "The Prussian State"
  PRE_authoritarian_monarchism:0 "Trichterbecher"
  PRE_authoritarian_monarchism_DEF:0 "The Trichterbecher Culture"
- PRE_stratocratic:0 "Preußischer Wehrstaat"
- PRE_stratocratic_DEF:0 "Der Preußische Wehrstaat"
- PRE_stratocratic_monarchism:0 "Prussian Provisional Government"
- PRE_stratocratic_monarchism_DEF:0 "The Prussian Provisional Government"
- PRE_monarchism:0 "Kingdom of Prussia"
- PRE_monarchism_DEF:0 "The Kingdom of Prussia"
- PRE_republican_fascism:0 "Prussian People's State"
- PRE_republican_fascism_DEF:0 "The Prussian People's State"
- PRE_fascism:0 "Preußisches Kaiserreich"
- PRE_fascism_DEF:0 "Das Preußische Kaiserreich"
- PRE_national_socialism:0 "Free State of Prussia"
- PRE_national_socialism_DEF:0 "The Free State of Prussia"
- PRE_theocratic:0 "State of the Teutonic Order"
- PRE_theocratic_DEF:0 "The State of the Teutonic Order"
- PRE_right_anarchism:0 "Prussian Industrial Federation"
- PRE_right_anarchism_DEF:0 "The Prussian Industrial Federation"
  PRE_ADJ:0 "Prussian"
  
  NIR_communism:0 "Union of Northern Ireland"
@@ -10009,35 +9927,9 @@
  KMI_vanguardism_DEF:0 "The Komi Autonomous Soviet Socialist Republic"
  KMI_ADJ:0 "Komi"
 
- ARH_vanguardism:0 "West Russian Revolutionary Front"
- ARH_vanguardism_DEF:0 "The West Russian Revolutionary Front"
- ARH_vanguardism_ADJ:0 "Soviet"
- ARH_communism:0 "West Russian Revolutionary Front"
- ARH_communism_DEF:0 "The West Russian Revolutionary Front"
- ARH_communism_ADJ:0 "Arkhangelskian"
- ARH_centrist_republic:0 "Arkhangelsk Oblast"
- ARH_centrist_republic_DEF:0 "The Arkhangelsk Oblast"
- ARH_centrist_republic_ADJ:0 "North Arkhangelskian"
- ARH_democratic:0 "Republic of Arkhangelsk"
- ARH_democratic_DEF:0 "The Republic of Arkhangelsk"
- ARH_democratic_ADJ:0 "Arkhangelskian"
- ARH_neutrality:0 "North Russian Liberation Front"
- ARH_neutrality_DEF:0 "The North Russian Liberation Front"
- ARH_neutrality_ADJ:0 "North Russian"
- ARH_stratocratic:0 "West Russian Revolutionary Front"
- ARH_stratocratic_DEF:0 "The West Russian Revolutionary Front"
- ARH_stratocratic_ADJ:0 "Soviet"
  ARH_authoritarian_monarchism:0 ""
  ARH_authoritarian_monarchism_DEF:0 "The Neolithic Eurasian Arctic"
  ARH_authoritarian_monarchism_ADJ:0 "Eurasian"
- ARH_fascism:0 "Empire of Arhangelsk"
- ARH_fascism_DEF:0 "The Empire of Arhangelsk"
- ARH_fascism_ADJ:0 "Arkhangelskian"
- ARH_national_socialism:0 "Reichgau Erzengelstadt"
- ARH_national_socialism_DEF:0 "das Reichskommissariat Nordrussland"
- ARH_national_socialism_ADJ:0 "Nordrussisch"
- ARH_right_anarchism:0 "North Russian Authority"
- ARH_right_anarchism_DEF:0 "The North Russian Authority"
  
  VLG:0 "Vologda"
  VLG_DEF:0 "Vologda"
@@ -12032,33 +11924,9 @@
  SAM_right_anarchism_DEF:0 "The Samoan Shipping and Trading Company"
  SAM_right_anarchism_ADJ:0 "Samoan"
  
- TRI_communism:0 "People's Republic of Trinidad and Tobago"
- TRI_communism_DEF:0 "The People's Republic of Trinidad and Tobago"
- TRI_communism_ADJ:0 "Trinbagonian"
- TRI_fascism:0 "Trinidad and Tobago"
- TRI_fascism_DEF:0 "The Trinidad and Tobago"
- TRI_fascism_ADJ:0 "Trinbagonian"
- TRI_democratic:0 "Republic of Trinidad and Tobago"
- TRI_democratic_DEF:0 "The Republic of Trinidad and Tobago"
- TRI_democratic_ADJ:0 "Trinbagonian"
- TRI_neutrality:0 "Trinidad and Tobago"
- TRI_neutrality_DEF:0 "The Trinidad and Tobago"
- TRI_neutrality_ADJ:0 "Trinbagonian"
- TRI_monarchism:0 "Kingdom of Trinidad"
- TRI_monarchism_DEF:0 "The Kingdom of Trinidad"
- TRI_monarchism_ADJ:0 "Trinidadian"
- TRI_stratocratic_monarchism:0 "Province of Trinidad"
- TRI_stratocratic_monarchism_DEF:0 "The Province of Trinidad"
- TRI_stratocratic_monarchism_ADJ:0 "Trinidadian"
- TRI_conservative_monarchism:0 "Dominion of Trinidad and Tobago"
- TRI_conservative_monarchism_DEF:0 "The Dominion of Trinidad and Tobago"
- TRI_liberal_republic:0 "Republic of Trinidad and Tobago"
- TRI_liberal_republic_DEF:0 "The Republic of Trinidad and Tobago"
  TRI_ADJ:0 "Trinidadian"
  TRI_authoritarian_monarchism:0 "Ortoi"
  TRI_authoritarian_monarchism_DEF:0 "The Ortoi Culture"
- TRI_right_anarchism:0 "Privateer's Republic of Trinidad"
- TRI_right_anarchism_DEF:0 "The Privateer's Republic of Trinidad"
  
  BAH_communism:0 "Bahamian Soviet"
  BAH_communism_DEF:0 "The Bahamian Soviet"
@@ -14881,20 +14749,8 @@
  SCN_national_socialism_DEF:0 "das Reichskommissariat Schweden"
  SCN_ADJ:0 "Scanian"
  
- SAP_anarchism_ideology:0 "Saami Tribes"
- SAP_anarchism_ideology_DEF:0 "The Saami Tribes"
- SAP_democratic:0 "Saami Federation"
- SAP_democratic_DEF:0 "The Saami Federation"
- SAP_communism:0 "People's Republic of Sapmi"
- SAP_communism_DEF:0 "The People's Republic of Sapmi"
- SAP_fascism:0 "Saami Empire"
- SAP_fascism_DEF:0 "The Saami Empire"
  SAP_authoritarian_monarchism:0 ""
  SAP_authoritarian_monarchism_DEF:0 "The Neolithic Saami"
- SAP_neutrality:0 "Republic of Sapmi"
- SAP_neutrality_DEF:0 "The Republic of Sapmi"
- SAP_monarchism:0 "Kingdom of Sapmi"
- SAP_monarchism_DEF:0 "The Kingdom of Sapmi"
  SAP_ADJ:0 "Saami"
  
  NOV_ADJ:0 "Novorossiyan"
@@ -19881,22 +19737,7 @@
  
  ACR_authoritarian_monarchism:0 "Sechin"
  ACR_authoritarian_monarchism_DEF:0 "The Sechin Culture"
- ACR_democratic_ADJ:0 "Acrean"
- ACR_communism:0 "People's Republic of Acre"
- ACR_communism_DEF:0 "The People's Republic of Acre"
- ACR_communism_ADJ:0 "Acrean"
- ACR_fascism:0 "Acrean Empire"
- ACR_fascism_DEF:0 "The Acrean Empire"
- ACR_fascism_ADJ:0 "Acrean"
- ACR_neutrality:0 "Acre"
- ACR_neutrality_DEF:0 "The Acre"
- ACR_neutrality_ADJ:0 "Acrean"
- ACR_monarchism:0 "Kingdom of Acre"
- ACR_monarchism_DEF:0 "The Kingdom of Acre"
- ACR_monarchism_ADJ:0 "Acrean"
- ACR_anarchism_ideology:0 "Panoan Tribes"
- ACR_anarchism_ideology_DEF:0 "The Panoan Tribes"
- ACR_anarchism_ideology_ADJ:0 "Panoan"
+ ACR_ADJ:0 "Acrean"
  
  VEP_democratic:0 "Republic of Vepsia"
  VEP_democratic_DEF:0 "The Republic of Vepsia"
@@ -19965,24 +19806,9 @@
  MUN_centrist_republic_DEF:0 "The Irish Republican Army"
  MUN_centrist_republic_ADJ:0 "Irish"
  
- LEI_democratic:0 "Republic of Leinster"
- LEI_democratic_DEF:0 "The Republic of Leinster"
- LEI_democratic_ADJ:0 "Leinsterian"
- LEI_communism:0 "People's Republic of Leinster"
- LEI_communism_DEF:0 "The People's Republic of Leinster"
- LEI_communism_ADJ:0 "Leinsterian"
- LEI_fascism:0 "Leinsterian Empire"
- LEI_fascism_DEF:0 "The Leinsterian Empire"
- LEI_fascism_ADJ:0 "Leinsterian"
- LEI_neutrality:0 "Leinster"
- LEI_neutrality_DEF:0 "The Leinster"
- LEI_neutrality_ADJ:0 "Leinsterian"
  LEI_authoritarian_monarchism:0 "Ebel'aini"
  LEI_authoritarian_monarchism_DEF:0 "The Ebel'aini Culture"
- LEI_authoritarian_monarchism_ADJ:0 "Ebel'aini'i"
- LEI_centrist_monarchism:0 "Dominion of Southern Ireland"
- LEI_centrist_monarchism_DEF:0 "The Dominion of Southern Ireland"
- LEI_centrist_monarchism_ADJ:0 "Southern Irish"
+ LEI_ADJ:0 "Leinster"
  
  CNG_communism:0 "People's Republic of Connacht"
  CNG_communism_DEF:0 "The People's Republic of Connacht"
@@ -29390,25 +29216,7 @@
  
  YUC_authoritarian_monarchism:0 "Taxutcla"
  YUC_authoritarian_monarchism_DEF:0 "The Taxutcla Culture"
- YUC_democratic:0 "Republic of Yucatan"
- YUC_democratic_DEF:0 "The Republic of Yucatan"
- YUC_neutrality:0 "Territory of Yucatan"
- YUC_neutrality_DEF:0 "The Territory of Yucatan"
- YUC_communism:0 "People's Republic of the Yucatan"
- YUC_communism_DEF:0 "The People's Republic of the Yucatan"
- YUC_stratocratic:0 "American Occupation of Yucatan"
- YUC_stratocratic_DEF:0 "The American Occupation of Yucatan"
- YUC_national_socialism:0 "Golden Circle Free State"
- YUC_national_socialism_DEF:0 "The Golden Circle Free State"
  YUC_ADJ:0 "Yucatan"
- YUC_monarchism:0 "Mayan Kingdom"
- YUC_monarchism_DEF:0 "The Mayan Kingdom"
- YUC_monarchism_ADJ:0 "Mayan"
- YUC_fascism:0 "Mayan Empire"
- YUC_fascism_DEF:0 "The Mayan Empire"
- YUC_fascism_ADJ:0 "Mayan"
- YUC_stratocratic_monarchism:0 "Captaincy General of Yucatan"
- YUC_stratocratic_monarchism_DEF:0 "The Captaincy General of Yucatan"
 
  NAV_neutrality:0 "Navarre"
  NAV_neutrality_DEF:0 "The Navarre"
